--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -18,3 +18,12 @@ body{
 #container h1{
     font-size: 25px;
 }
+
+#cabecera{
+    background: blue;
+    color: white;
+    font-weight: bold;
+    text-align: center;
+    padding: 10px;
+    margin: 0;
+}
